--- a/index.html
+++ b/index.html
@@ -24,6 +24,29 @@
     <main id="main-content">
         <!--Himasri-->
         <!--Omprakash-->
+        <section id="dopamine" class="content-section">
+            <h2 class="section-title">The Dopamine Reward System and Social Media Addiction</h2>
+            <p class="section-description">One of the central reasons social media is so engaging is its manipulation of the brain’s dopamine reward system. Dopamine is a neurotransmitter associated with pleasure, motivation, and reinforcement of
+                behaviors. Every notification, like, comment, or share delivers a small dopamine release, encouraging
+                repeated use. This creates a feedback loop similar to gambling or substance addiction, where users
+                continually seek more stimulation.
+            </p>
+            <p class="section-description">
+                The unpredictability of social rewards, such as the number of likes a post may receive, plays a
+                significant role in reinforcing this behavior. This variable reward system keeps users engaged for
+                longer periods, often at the cost of their mental well-being. Over time, individuals may become
+                dependent on social media interactions to feel validated or happy, leading to emotional instability and
+                distraction.
+            </p>
+        </section>
+        <section id="comparison" class="content-section">
+            <h2 class="section-title">Social Comparison, Self-Esteem, and Anxiety</h2>
+            <p class="section-description">Social media fosters an environment of constant comparison. Users often showcase the best parts of their lives, creating a skewed reality that others perceive as normal. This leads to social comparison, where individuals evaluate their worth based on others’ curated content. Repeated exposure to idealized images and lifestyles can result in dissatisfaction with one’s own life, body image issues, and feelings of inadequacy.
+</p>
+        <p>In addition, the culture of likes and follows creates a form of external validation, where users rely on others’ feedback to determine their self-worth. This dependence can make them more vulnerable to negative comments, low engagement, or online criticism, which in turn fosters anxiety and depression. The fear of missing out (FOMO) further contributes to this stress, as users feel pressured to stay constantly connected to avoid being left out.
+</p>
+        </section>
+
         <!--Sayeeram-->
     </main>
     <footer class="footer" id="main-footer">
