added welcome section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,26 @@
         </nav>
     </header>
     <main id="main-content">
-        <!--Himasri-->
+         <!--Himasri-->
+        <section id="welcome" class="welcome-section">
+            <h1 class="section-title">Welcome to the Psychology of Social Media</h1>
+            <p class="section-description">Explore how social media impacts mental health and discover strategies for healthier engagement.</p>
+            <div class="welcome-images">
+                <img src="images/social-media-1.jpg" alt="Social Media Illustration 1" class="welcome-image">
+                <img src="images/social-media-2.jpg" alt="Social Media Illustration 2" class="welcome-image">
+                <img src="images/social-media-3.jpg" alt="Social Media Illustration 3" class="welcome-image">
+            </div>
+        </section>
+        <section id="introduction" class="content-section">
+            <h1 class="section-title">The Psychology of Social Media: How It Affects Mental Health</h1>
+            <p class="section-description">Social media has become an integral part of modern life, especially for younger generations. Platforms
+                such as Instagram, TikTok, and Snapchat dominate online spaces and influence how people interact and
+                perceive themselves. With their emphasis on instant feedback and social validation, these platforms have
+                been linked to various psychological outcomes. While they can foster connection, creativity, and social
+                learning, excessive or maladaptive use can lead to increased stress, anxiety, depression, and decreased
+                self-esteem.
+            </p>
+        </section>
         <!--Omprakash-->
         <section id="dopamine" class="content-section">
             <h2 class="section-title">The Dopamine Reward System and Social Media Addiction</h2>
