Updateted Web Page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,23 @@
         </section>
 
         <!--Sayeeram-->
+        <section id="effects" class="content-section">
+            <h2 class="section-title">Emotional and Cognitive Effects of Excessive Use</h2>
+            <p class="section-description">Prolonged exposure to social media can affect emotional regulation and cognitive functioning. Studies have shown that heavy users often experience increased levels of anxiety, mood swings, irritability, and attention difficulties. Social media also disrupts sleep patterns, especially when used late at night, reducing the quality of rest and increasing fatigue, which further impacts emotional stability.</p>
+            <p>Moreover, the rapid pace of content—especially on platforms like TikTok—may reduce attention span and patience, affecting academic performance and real-life social interactions. The instant gratification offered by digital platforms can also lead to difficulties in managing boredom or delayed rewards in offline life.
+            </p>
+        </section>
+        <section id="resilience" class="content-section">
+            <h2 class="section-title">Psychological Resilience and Healthy Habits</h2>
+            <p class="section-description">Despite these challenges, individuals can build psychological resilience and adopt healthier digital habits. Recognizing the emotional effects of social media and reflecting on one’s usage patterns are the first steps toward change. Practicing digital mindfulness—such as setting time limits, disabling unnecessary notifications, and unfollowing accounts that trigger negative emotions—can significantly improve well-being</p>
+            <p class="section-description">
+            Engaging in offline activities, maintaining real-world relationships, and using social media purposefully rather than compulsively are also effective strategies. Additionally, promoting digital literacy in schools and families can equip individuals with the tools to navigate online spaces safely and thoughtfully.
+            </p>
+        </section>
+        <section id="conclusion" class="content-section">
+            <h2 class="section-title">Conclusion</h2>
+            <p class="section-description">Social media is a powerful tool that reflects both the best and worst aspects of human interaction. While it enables creativity and connection, its psychological effects cannot be ignored. Addiction, comparison, validation-seeking, and emotional distress are growing concerns among frequent users. Through increased awareness, responsible design, and conscious usage, individuals and communities can mitigate the negative impacts of social media and promote healthier online experiences.</p>
+        </section>
     </main>
     <footer class="footer" id="main-footer">
         <p class="footer-text">&copy; 2025 Psychology of Social Media. All rights reserved.</p>
